@@ -1,3 +1,12 @@
+2009-02-05 (0.1.3)
+  * nono on github made the Ruby more idiomatic and fixed a section
+    which had eluded Gordon earlier.  He also added profiling, which
+    can be run using "rake profiling" then opening profiling.html
+    in a browser.
+  * Raphael Knaus found an infinite loop error while parsing a nested
+    list.  He provided a quick fix, but both he and I are dissatisfied
+    by the current workaround.
+    
 2008-12-12 (0.1.2)
   * Made the usage more clear by adding the "require 'rubygems'" before
     the require 'wiki_creole' command
